// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie notification snapshot 1`] = `
"<html>
  <style>
  .table {
    font-family: \\"Trebuchet MS\\", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
  }
  .table td, .table th {
    padding: 8px;
    text-align: left;
  }
  .table th {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: center;
    background-color: #4CAF50;
    color: white;
  }
  .table tfoot {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #dcdcdc;
  }
  </style>
  <body>
  <table class='table'>
    <thead>
      <tr>
         <th>LanFlix Movie Alert: Die Hard</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          
<br>
  <b>Die Hard</b> has just been added to the Plex Server.
<br>
<br>
  From my understanding, you asked to be notified about this.
<br>
<p>
  It should be ready any moment to be streamed!
<p> 
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>Don't want this notification? Go to <a href='https://lanflix.firebaseapp.com'>LanFlix</a> and toggle the subscription!</td>
      </tr>
    </tfoot>
  </table>
  </body>
  </html>"
`;

exports[`New Show notification snapshot 1`] = `
"<html>
  <style>
  .table {
    font-family: \\"Trebuchet MS\\", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
  }
  .table td, .table th {
    padding: 8px;
    text-align: left;
  }
  .table th {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: center;
    background-color: #4CAF50;
    color: white;
  }
  .table tfoot {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #dcdcdc;
  }
  </style>
  <body>
  <table class='table'>
    <thead>
      <tr>
         <th>LanFlix New Show Alert: Atlanta</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          
<br>
  <b>Atlanta</b> appears to be a new show on the server, would you like to subscribe?
</br>
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>Go to <a href='https://lanflix.firebaseapp.com'>LanFlix</a> and toggle the subscription!</td>
      </tr>
    </tfoot>
  </table>
  </body>
  </html>"
`;

exports[`Request movie notification snapshot 1`] = `
"<html>
  <style>
  .table {
    font-family: \\"Trebuchet MS\\", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
  }
  .table td, .table th {
    padding: 8px;
    text-align: center;
  }
  .table th {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: undefined;
    background-color: #4CAF50;
    color: white;
  }
  .table tfoot {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: undefined;
    background-color: #dcdcdc;
  }
  </style>
  <body>
  <table class='table'>
    <thead>
      <tr>
         <th>New Request: <a href='https://www.themoviedb.org/movie/undefined'><h3>Die Hard</h3></a></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <img src=\\"https://image.tmdb.org/t/p/originalundefined\\" style='width:200px;height:300px;'/><br>
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td></td>
      </tr>
    </tfoot>
  </table>
  </body>
  </html>"
`;

exports[`Request show notification snapshot 1`] = `
"<html>
  <style>
  .table {
    font-family: \\"Trebuchet MS\\", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
  }
  .table td, .table th {
    padding: 8px;
    text-align: center;
  }
  .table th {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: undefined;
    background-color: #4CAF50;
    color: white;
  }
  .table tfoot {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: undefined;
    background-color: #dcdcdc;
  }
  </style>
  <body>
  <table class='table'>
    <thead>
      <tr>
         <th>New Request: <a href='https://www.themoviedb.org/tv/undefined'><h3>Atlanta</h3></a></th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <img src=\\"https://image.tmdb.org/t/p/originalundefined\\" style='width:200px;height:300px;'/><br>
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>Which: all</td>
      </tr>
    </tfoot>
  </table>
  </body>
  </html>"
`;

exports[`Show notification snapshot 1`] = `
"<html>
  <style>
  .table {
    font-family: \\"Trebuchet MS\\", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
  }
  .table td, .table th {
    padding: 8px;
    text-align: left;
  }
  .table th {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: center;
    background-color: #4CAF50;
    color: white;
  }
  .table tfoot {
    border: 1px solid #ddd;
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #dcdcdc;
  }
  </style>
  <body>
  <table class='table'>
    <thead>
      <tr>
         <th>LanFlix Show Alert: Atlanta</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          
<br>
  A new episode of <b>Atlanta</b> has just been added to the Plex Server.
<br>
<br>
  From my understanding, you asked to be notified about this.
<br>
<p>
  It should be ready any moment to be streamed!
<p> 
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>Don't want this notification? Go to <a href='https://lanflix.firebaseapp.com'>LanFlix</a> and toggle the subscription!</td>
      </tr>
    </tfoot>
  </table>
  </body>
  </html>"
`;
